--- a/contact/index.html
+++ b/contact/index.html
@@ -29,7 +29,7 @@
 <nav>
 	
 <div class="nav">
-	<img src="../images/em-logo-xsmall.jpg" alt="Enviromech Canberra - HVAC Canberra" title="Enviromech Canberra - HVAC installations in Canberra">
+	<a href="http://enviromech-light.calumjohnston.me"><img src="../images/em-logo-xsmall.jpg" alt="Enviromech Canberra - HVAC Canberra" title="Enviromech Canberra - HVAC installations in Canberra"></a>
 	<ul>
 		<a href="../index.html"><li id="home-link">HOME</li></a>
 		<a href="../aboutus/index.html"><li>ABOUT</li></a>
@@ -41,7 +41,7 @@
 </nav>
 
 <header>
-	<img src="../images/em-logo-xsmall.jpg" alt="Enviromech Canberra - HVAC Canberra" title="Enviromech Canberra - HVAC installations in Canberra">
+	<a href="http://enviromech-light.calumjohnston.me"><img src="../images/em-logo-xsmall.jpg" alt="Enviromech Canberra - HVAC Canberra" title="Enviromech Canberra - HVAC installations in Canberra"></a>
   <button class="hamburger">&#9776;</button>
   <button class="cross">&#735;</button>
 </header>
