--- a/services/index.html
+++ b/services/index.html
@@ -20,7 +20,8 @@
 	<div class="contact-wrapper">
 		<div class="contact-info">
 			<div>
-				<div id="header-phone"><i class="ion-ios-telephone"></i>(02) 6262 0448</div>
+				<div id="header-phone"><i class="ion-ios-telephone"></i>	
+(02) 6239 1888</div>
 				<div id="header-address"><i class="ion-ios-home"></i>2/137 Canberra Ave</div>
 				<div id="header-email"><i class="ion-ios-email"></i>admin@enviromech.com.au</div>
 			</div>
@@ -144,7 +145,8 @@
 		<div class="divider">
 
 			<div class="divider-title">
-				<h2 class="call-us">Call us on (02) 6262 0448</h2>
+				<h2 class="call-us">Call us on 	
+(02) 6239 1888</h2>
 			</div>
 		</div>
 </section>
@@ -162,7 +164,8 @@
 	</div>
 	<div class="contact-left">
 		<h3>Canberra</h3>
-		<p><i class="ion-ios-telephone"></i>(02) 6262 0448</p>
+		<p><i class="ion-ios-telephone"></i>	
+(02) 6239 1888</p>
 		<p><i class="ion-ios-home"></i>2/137 Canberra Avenue</p>
 		<p><i class="ion-ios-email"></i>admin@enviromech.com.au</p>
 	</div>
@@ -171,7 +174,8 @@
 	</div> -->
 	<div class="contact-left">
 		<h3>Melbourne</h3>
-		<p><i class="ion-ios-telephone"></i>(02) 6262 0448</p>
+		<p><i class="ion-ios-telephone"></i>	
+(02) 6239 1888</p>
 		<p><i class="ion-ios-home"></i>2/2 Royan Pl, Bayswater, 3153</p>
 		<p><i class="ion-ios-email"></i>admin@enviromech.com.au</p>
 	</div>
